--- a/.github/workflows/upstream-release.yaml
+++ b/.github/workflows/upstream-release.yaml
@@ -19,7 +19,7 @@ jobs:
     name: Sync upstream releases
     uses: lengau/snappify/.github/workflows/sync-gh-releases.yaml@c29366560f49fb1e20cca823654c87d81678ce0a
     with:
-      upstream_repository: astral-sh/ruff
+      upstream_repository: codespell-project/codespell
       max_releases: 2
       prep_script: tools/prep_release.sh
   do-releases:
