build: temporarily disable most architectures
Just for testing the test ci

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,11 +12,11 @@ description: |
 
 architectures:
   - amd64
-  - arm64
-  - armhf
-  - ppc64el
-  - riscv64
-  - s390x
+  # - arm64
+  # - armhf
+  # - ppc64el
+  # - riscv64
+  # - s390x
 
 confinement: strict
 base: core22
